[Fixes] UI alignment on client page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -498,7 +498,7 @@ button.btn, input[type="submit"].btn {
           font-size: 16px;
           text-overflow: ellipsis;
           overflow: hidden;
-          min-width: 250px;
+          min-width: 225px;
         }
       }
       .icon-remove {
